# CookiefyAPI

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  celery_app.py  docker-compose.yml  pyproject.toml  test_geo.py  test_scraper_3.py
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 1703fa76806b_add_code_and_timestamp_to_users_table.py  1a91334a041e_fix_image_attribute.py  1bff7f9d4fb8_create_lists_update_sites_and_added_.py  579171a476d7_create_sites_table.py  9e81c8c8903e_add_username_to_users_table.py  ad3d4bc7b385_create_users_table.py  d1874870e00f_modify_hashtag_table.py  e2a438457a07_add_scoring_to_tables.py  f2ea9d32fdbe_add_user_interaction_table.py
app/: babel.cfg  celery_worker.py  main.py
app/algorithms/: algorithm.py
app/api/: auth.py  legal.py  media.py  posts.py  users.py
app/constants/: enums.py
app/core/: config.py  exceptions.py  i18n.py  security.py
app/db/: base.py  base_models_imports.py  seed.py  session.py
app/db/migrations/: lists_data.sql  seed_data.sql  sites_data.sql
app/locales/ca/LC_MESSAGES/: messages.po
app/locales/en/LC_MESSAGES/: messages.po
app/locales/es/LC_MESSAGES/: messages.po
app/models/: associations.py  category.py  hashtag.py  image.py  lists.py  site.py  user.py  user_interactions.py
app/repositories/: metrics_repo.py  post_repo.py  user_repo.py
app/schemas/: media.py  post.py  responses.py  user.py
app/services/: __init__.py  auth_service.py  post_service.py  scoring_service.py  user_service.py  web_scraper_service.py
app/tasks/: scraper.py  test.py
app/template/: email_code.html  privacy_policy.html  terms_of_service.html  validation_result.html
app/tests/: conftest.py  test_users.py
app/tests/compose/: Dockerfile  docker-compose.yml  entrypoint.sh  init.sql
app/tests/factories/: dummy_data.py
app/tests/integration/: test_post_routes.py
app/tests/integration/posts/: test_post_routes.py
app/tests/unit/: test_algorithms.py  test_post_service.py
app/tmp/: email_code.html  email_pwd_recovery.html  validation_result.html
app/utils/: __init__.py  date_time.py  email.py  geocoding.py  logger.py
