[project]
name = "cookiefyapi"
version = "0.1.0"
description = "Cookiefy API project to handle the application services"
authors = [{ name = "Ferran Colome", email = "ferrancolomsanz@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<4.0"
package-mode = false

dependencies = [
    "fastapi>=0.115.8,<0.116.0",
    "uvicorn[standard]>=0.34.0,<0.35.0",
    "sqlalchemy>=2.0.38,<3.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "alembic>=1.14.1,<2.0.0",
    "pydantic-settings>=2.8.0,<3.0.0",
    "email-validator>=2.2.0,<3.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-jose[cryptography]>=3.4.0,<4.0.0",
    "python-multipart>=0.0.20,<0.0.21",
    "pytz>=2025.1,<2026.0",
    "jinja2>=3.1.5,<4.0.0",
    "aiofiles>=24.1.0,<25.0.0",
    "babel>=2.17.0,<3.0.0",
    "itsdangerous>=2.2.0,<3.0.0",
    "slowapi>=0.1.9,<0.2.0",
    "celery>=5.5.2,<6.0.0",
    "redis>=6.1.0,<7.0.0",
    "requests>=2.32.3,<3.0.0",
    "beautifulsoup4>=4.13.4,<5.0.0",
    "pandas>=2.2.3,<3.0.0",
    "pillow (>=11.2.1,<12.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.15.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.23.5"
httpx = "^0.28.1"
